<resources>
    <string name="app_name">AstroWeather</string>
    <string name="exit">Exit</string>
    <string name="next">Next</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="timerefresh">Time Refresh</string>
    <string name="activity_fragment_sun">activity_fragment_sun</string>
    <string name="activity_fragment_moon">activity_fragment_moon</string>
    <string name="time">Actual time: </string>
    <string name="fill">Change or go to weather</string>
    <string name="sunrise">Sunrise -></string>
    <string name="sunset">Sunset -></string>
    <string name="twilight_evening">Twilight evening-></string>
    <string name="twilight_morning">Twilight morning-></string>
    <string name="moonrise">Moonrise -></string>
    <string name="moon_set">Moon set -></string>
    <string name="new_moon">New moon -></string>
    <string name="full_moon">Full moon -></string>
    <string name="moon_phase">Moon phase -></string>
    <string name="day_of_the_synod_month">Day of the synod month-></string>
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>
    <string name="city">City:</string>
    <string name="refresh_and_show_weather">Refresh and show weather</string>
    <string name="show_weather">Show weather</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="description">Description:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_direction">Wind direction:</string>
    <string name="humidity">Humidity:</string>
    <string name="visibility">Visibility:</string>
    <string name="astro">Astro</string>
    <string name="weather">Weather</string>
    <string name="unit">Unit:</string>
    <string name="add_new_city">add new city</string>
    <string name="day">Day:</string>
    <string name="min_tempetarure">Min tempetarure:</string>
    <string name="max_temperature">Max temperature:</string>
    <string name="astro_and_weather">Astro and Weather</string>
    <string name="cities">CITIES</string>
    <string name="refresh_data">REFRESH</string>
</resources>
