<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewFill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fill"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewLatitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/latitude"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/EditTextLatitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:lines="1"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/SpinnerLatitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewLongitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/longitude"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/EditTextLongitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:lines="1"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/SpinnerLongitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewTimeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/timerefresh"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/SpinnerTimeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewTime1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/time"
            android:paddingRight="5sp"
            android:gravity="center|right"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextViewActualTime1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center|left"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>

