<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewMoonrise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/moonrise"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewMoonriseTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewMoonSet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/moon_set"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewMoonSetTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewNewMoon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/new_moon"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewNewMoonDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewFullMoon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/full_moon"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewFullMoonDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewMoonPhase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/moon_phase"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewMoonPhasePercent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewSynodMonth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="3"
            android:layout_weight="1"
            android:text="@string/day_of_the_synod_month"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewSynodMonthDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>