<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/TextViewCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/cities"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="-10sp"
        android:orientation="horizontal">

        <ScrollView
        android:id="@+id/ScrollViewCity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/CityButtonList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"/>
    </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EditTextCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/ButtonAddNewCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/add_new_city" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewTempUnit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/unit"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/SpinnerUnits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>

