<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="2"
                    android:text="@string/city"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextViewCityName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="2"
                    android:text="@string/latitude"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextViewLatitudeValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="2"
                    android:text="@string/longitude"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextViewLongitudeValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="2"
                    android:text="@string/temperature"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextViewTemperatureValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="2"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewPressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="2"
                    android:text="@string/pressure"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextViewPressureValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="2"
                    android:text="@string/description"
                    android:gravity="left|center"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextViewDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>