<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewSunrise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/sunrise"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewSunriseTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewSunriseAzimuth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewSunset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/sunset"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewSunsetTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewSunsetAzimuth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewTwilightEvening"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/twilight_evening"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewTwilightEveningTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextViewTwilightMorning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:text="@string/twilight_morning"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewTwilightMorningTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>